Fixed home page mobile alignment issue (#1957)

--- a/src/src/routes/Home/Home.css
+++ b/src/src/routes/Home/Home.css
@@ -11,7 +11,7 @@
 }
 
 .inverseSectionSignupOverride {
-	padding-top: 240px;
+	padding-top: 280px;
 
 	@media ScreenSMMin {
 		padding-top: 80px;
